feat: Complete the serialization with hessian2